@@ -1,5 +1,5 @@
 APACHE PORTABLE RUNTIME (APR) LIBRARY STATUS:			-*-text-*-
-Last modified at [$Date: 2001/01/19 03:08:40 $]
+Last modified at [$Date: 2001/01/19 03:13:00 $]
 
 Release:
 
@@ -56,10 +56,6 @@ RELEASE NON-SHOWSTOPPERS BUT WOULD BE REAL NICE TO WRAP THESE UP:
       crypt() function is available, and a way to call it (whether it is
       located in libc, libcrypt, or libufc)
         Status: Greg +1 (volunteers)
-
-    * apr_dso_load() should (uniformly) add a cleanup to unload the DSO.
-      Currently, the per-platform DSO loading is inconsistent in this
-      regard.
 
     * apr_create_lock() changes:
       - It ignores the "type" parameter, so toss it.
